--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "qs": "^6.13.0",
     "vue": "^3.4.37",
     "vue-qr": "^4.0.9",
-    "vue-router": "^4.4.3"
+    "vue-router": "^4.4.3",
+    "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
     "@types/node": "^22.5.4",
